--- a/index.html
+++ b/index.html
@@ -7,6 +7,92 @@
   <title>CoderDojoあしや</title>
 </head>
 <body>
+    <section>
+        <h2>CoderDojoとは</h2>
+        <p>CoderDojoは7歳から〜17歳を対象にした非営利のプログラミング道場です。2011年にアイルランドで始まり、2019年7月現在、世界では110カ国・2,000の道場、日本には178以上の道場があります。CoderDojoは有志のボランティアの方々によって各地で運営されていて、無料で参加することができます。CoderDojoでは、参加者をニンジャ、教えてくれる人をメンター、各Dojoを運営している人をチャンピオンと呼びます。</p>
+    </section>
+    <section>
+        <h2>CoderDojo あしやについて</h2>
+        <p>兵庫県芦屋市の市民活動センター(リードあしや)様のご協力の下、毎月土曜日に開催しています。(参加する場合は事前に申し込みが必要です)CoderDojo
+            あしやでは、メンターのみなさんが、Scratchやmicro:bit、HTMLやCSSを使ったWebサイト制作などをサポートします。CoderDojoでは「子どもたちの作りたいものをサポートする」という目的のもと、ものづくりのサポートを行います。こちらでカリキュラムを組んで、教えているわけではありません。希望に応じて、参考書や教材などを提供することは可能です。</p>
+    </section>
+    <section>
+        <h2>注意事項</h2>
+        <ul>
+            ・WiFiに接続可能なパソコンの持ち込みが必要です。
+            ・施設での飲食は禁止となっています。水分補給のみ可能です。
+            ・事前にDoorkeeperで申込みをして頂く必要があります。
+            ・小学生以下のお子様の場合は、保護者の方の送迎をお願いします。
+            ・利用施設に人数制限がございます。参加者多数の場合は、保護者の方々に立ち見、もしくは退席をお願いすることがございます。
+            ・パソコンにパスワードを設定している場合は、事前にお子様にお伝えいただくか、無効にしていただきますようお願いします。
+            ・休憩時間はとっておりません。各自ご自由にお願いします。
+            ・貴重品の管理はご自身で行ってください。紛失・破損などの責任は一切とりかねます。
+            ・活動の記録のため、写真や動画を撮影いたします。
+            撮影した写真は広報の一環としてWebサイトやSNSなどに公開させていただきます。
+            ・発表の時間に作ったものを発表することができます。
+            プロジェクターを使用するため、HDMIでの接続に対応しているパソコンをご用意いただくか、変換アダプタのご持参をお願いします。
+        </ul>
+    </section>
+    <section>
+        <h2>スケジュール</h2>
+        <p>13:00 受付開始<br>
 
+            13:30 自由創作タイム開始<br>
+
+            15:45 発表タイム開始<br>
+
+            16:30 集合写真の撮影、片付け<br>
+
+            16:45 終了</p>
+    </section>
+    <section>
+        <h2>参加するには</h2>
+        <p>こちらより申し込みの方をお願いいたします。
+
+            申し込みフォームに自由創作タイムにしたいことを書いてください。
+
+            初参加でなにすればいいかわからないという方には、Scratch( https://scratch.mit.edu/ )のチュートリアルのサポートをさせていただきます。</p>
+        <h3>キャンセルをご希望の方</h3>
+        <p>キャンセルの場合は、必ずDoorkeeperよりキャンセルのほうをお願いします。
+            ひとりでも多くの方にご参加いただきたいと考えておりますので、ご協力よろしくお願いいたします。
+
+            キャンセルの方法がわからない場合は下記のメールアドレスよりご連絡いただきますようお願いいたします。</p>
+        <h3>見学について</h3>
+        <p>雰囲気をつかんでいただくために見学も可能です。
+            ただし参加者の人数によって、お断りさせていただくこともございます。
+
+            ご希望の方は下記のメールアドレスよりご連絡ください。</p>
+    </section>
+    <section>
+        <h2>寄付のお願い</h2>
+        <p>CoderDojo あしやでは、活動継続のための寄付を受け付けています。
+
+            会場に募金箱を設置しておりますので、任意で募金をお願いします。
+
+            ご支援いただいたお金は、会場費や教材費、サイト運営費などの経費に使わさせていただきます。</p>
+        <h3>団体・法人様へ</h3>
+        <p>団体・法人様向けにスポンサー制度をご用意しております。
+
+            ホームページやDoorkeeperのイベントページなどにスポンサーリンクを設置させていただきます。
+
+            詳しくはホームページ、またはメールでお問い合わせください。</p>
+    </section>
+    <section>
+        <h2>メンターになるには</h2>
+        <p>子どもたちのプログラミングでのものづくりをサポートしてくれるメンターを募集しています。
+
+            職業や年齢は問いません！
+            教えるのが好き、プログラミングのスキルを活かしてみたいという方は是非ご申請ください。
+
+            https://docs.google.com/forms/d/1yBEq46xgzQKHNWw3t2xKGKDmjx85sudeW6S0z-NOJUw</p>
+    </section>
+    <section>
+        <h2>連絡先</h2>
+        <p>ご不明な点がありましたら、お気軽にお問い合わせください。
+
+            メール: ashiya.jp@coderdojo.com
+
+            Web: https://coderdojo-ashiya.org</p>
+    </section>
 </body>
 </html>
