--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 子どもたちのプログラミングでのものづくりをサポートしてくれるメンターを募集しています。
                 職業や年齢は問いません！
                 教えるのが好き、プログラミングのスキルを活かしてみたいという方は是非ご申請ください。
-                https://docs.google.com/forms/d/1yBEq46xgzQKHNWw3t2xKGKDmjx85sudeW6S0z-NOJUw
+                <a href="https://docs.google.com/forms/d/1yBEq46xgzQKHNWw3t2xKGKDmjx85sudeW6S0z-NOJUw">メンター申請フォーム</a>
             </p>
         </section>
         <section>
