--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h2>連絡先</h2>
             <p>
                 ご不明な点がありましたら、お気軽にお問い合わせください。
-                メール: ashiya.jp@coderdojo.com
+                メール: ashiya.jp(at)coderdojo.com
                 Web: https://coderdojo-ashiya.org
             </p>
         </section>
