:pencil: some fix

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <section>
             <h2>連絡先</h2>
             <p>
-                ご不明な点がありましたら、お気軽にお問い合わせください。
-                メール: ashiya.jp(at)coderdojo.com
+                ご不明な点がありましたら、お気軽にお問い合わせください。<br />
+                メール: ashiya.jp(at)coderdojo.com<br />
                 Web: https://coderdojo-ashiya.org
             </p>
         </section>
