:construction: Add link

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
             <p>
                 こちらより申し込みの方をお願いいたします。
                 申し込みフォームに自由創作タイムにしたいことを書いてください。
-                初参加でなにすればいいかわからないという方には、Scratch (
-                https://scratch.mit.edu/
-                )のチュートリアルのサポートをさせていただきます。
+                初参加でなにすればいいかわからないという方には、<a href="https://scratch.mit.edu/" target="_blank">Scratch</a>のチュートリアルのサポートをさせていただきます。
             </p>
             <h3>キャンセルをご希望の方</h3>
             <p>
