:fire: Remove site link

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
             <h2>連絡先</h2>
             <p>
                 ご不明な点がありましたら、お気軽にお問い合わせください。<br />
-                メール: ashiya.jp(at)coderdojo.com<br />
-                Web: https://coderdojo-ashiya.org
+                メール: ashiya.jp(at)coderdojo.com
             </p>
         </section>
     </body>
