Fix tag of "about CoderDojo ashiya"

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 CoderDojo は7歳から〜17歳を対象にした非営利のプログラミング道場です。2011年にアイルランドで始まり、2019年7月現在、世界では110カ国・2,000の道場、日本には178以上の道場があります。CoderDojo は有志のボランティアの方々によって各地で運営されていて、無料で参加することができます。CoderDojo では、参加者をニンジャ、教えてくれる人をメンター、各Dojoを運営している人をチャンピオンと呼びます。
             </p>
         </section>
-        <p>
+        <section>
             <h2>CoderDojo あしやについて</h2>
             <p>
                 兵庫県芦屋市の市民活動センター(リードあしや)様のご協力の下、毎月土曜日に開催しています。(参加する場合は事前に申し込みが必要です)CoderDojo
                 あしやでは、メンターのみなさんが、Scratch や micro:bit、HTML や CSSを使った Web サイト制作などをサポートします。CoderDojo では「子どもたちの作りたいものをサポートする」という目的のもと、ものづくりのサポートを行います。こちらでカリキュラムを組んで、教えているわけではありません。希望に応じて、参考書や教材などを提供することは可能です。
             </p>
-        </p>
+        </section>
         <section>
             <h2>注意事項</h2>
             <ul>
