Add margin to top logo image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>CoderDojoあしや</title>
     </head>
     <body>
-        <img src="./assets/img/coderdojo-ashiya_logo_yoko.svg" />
+        <img src="./assets/img/coderdojo-ashiya_logo_yoko.svg" class="topimg" />
         <section>
             <h2>CoderDojo とは</h2>
             <p>
