:construction: Add doorkeeper link

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 ただし参加者の人数によって、お断りさせていただくこともございます。
                 ご希望の方は下記のメールアドレスよりご連絡ください。
             </p>
+            <a href="https://coderdojo-ashiya.doorkeeper.jp/events/upcoming" target="_blank">次回の開催日を確認する</a>
         </section>
         <section>
             <h2>寄付のお願い</h2>
