:construction: some fix

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
         <section>
             <h2>注意事項</h2>
             <ul>
-                <li>WiFiに接続可能なパソコンの持ち込みが必要です。</li>
+                <li>
+                  Wi-Fiに接続可能なパソコンの持ち込みが必要です。
+                </li>
                 <li>
                     施設での飲食は禁止となっています。水分補給のみ可能です。
                 </li>
-                <li>事前に Doorkeeper で申込みをして頂く必要があります。</li>
+                <li>
+                  事前に Doorkeeper で申し込みをして頂く必要があります。
+                </li>
                 <li>
                     小学生以下のお子様の場合は、保護者の方の送迎をお願いします。
                 </li>
@@ -41,15 +45,21 @@
                 <li>
                     パソコンにパスワードを設定している場合は、事前にお子様にお伝えいただくか、無効にしていただきますようお願いします。
                 </li>
-                <li>休憩時間はとっておりません。各自ご自由にお願いします。</li>
+                <li>
+                    休憩時間はとっておりません。各自ご自由にお願いします。
+                </li>
                 <li>
                     貴重品の管理はご自身で行ってください。紛失・破損などの責任は一切とりかねます。
                 </li>
-                <li>活動の記録のため、写真や動画を撮影いたします。</li>
+                <li>
+                    活動の記録のため、写真や動画を撮影いたします。
+                </li>
                 <li>
                     撮影した写真は広報の一環として Web サイトや SNS などに公開させていただきます。
                 </li>
-                <li>発表の時間に作ったものを発表することができます。</li>
+                <li>
+                  発表の時間に作ったものを発表することができます。
+                </li>
                 <li>
                     プロジェクターを使用するため、HDMI での接続に対応しているパソコンをご用意いただくか、変換アダプタのご持参をお願いします。
                 </li>
@@ -121,4 +131,7 @@
             </p>
         </section>
     </body>
+    <footer>
+      &copy; 2020 CoderDojo あしや
+    </footer>
 </html>
