--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <h2>CoderDojo あしやについて</h2>
             <p>
-                兵庫県芦屋市の市民活動センター(リードあしや)様のご協力の下、毎月土曜日に開催しています。(参加する場合は事前に申し込みが必要です)CoderDojo
+                兵庫県芦屋市の市民活動センター(リードあしや)様のご協力の下、毎月土曜日に開催しています。(参加する場合は事前に申し込みが必要です) CoderDojo
                 あしやでは、メンターのみなさんが、Scratch や micro:bit、HTML や CSSを使った Web サイト制作などをサポートします。CoderDojo では「子どもたちの作りたいものをサポートする」という目的のもと、ものづくりのサポートを行います。こちらでカリキュラムを組んで、教えているわけではありません。希望に応じて、参考書や教材などを提供することは可能です。
             </p>
         </section>
@@ -88,7 +88,7 @@
             </p>
             <h3>キャンセルをご希望の方</h3>
             <p>
-                キャンセルの場合は、必ず Doorkeeper よりキャンセルのほうをお願いします。
+                キャンセルの場合は、必ず <a href="https://coderdojo-ashiya.doorkeeper.jp/events/upcoming" target="_blank">Doorkeeper</a> よりキャンセルのほうをお願いします。
                 ひとりでも多くの方にご参加いただきたいと考えておりますので、ご協力よろしくお願いいたします。
                 キャンセルの方法がわからない場合は下記のメールアドレスよりご連絡いただきますようお願いいたします。
             </p>
@@ -98,7 +98,7 @@
                 ただし参加者の人数によって、お断りさせていただくこともございます。
                 ご希望の方は下記のメールアドレスよりご連絡ください。
             </p>
-            <a href="https://coderdojo-ashiya.doorkeeper.jp/events/upcoming" target="_blank">次回の開催日を確認する</a>
+            <a href="https://coderdojo-ashiya.doorkeeper.jp/events/upcoming" target="_blank" class="button">次回の開催日を確認する</a>
         </section>
         <section>
             <h2>寄付のお願い</h2>
@@ -110,7 +110,7 @@
             <h3>団体・法人様へ</h3>
             <p>
                 団体・法人様向けにスポンサー制度をご用意しております。
-                ホームページや Doorkeeper のイベントページなどにスポンサーリンクを設置させていただきます。
+                ホームページや <a href="https://coderdojo-ashiya.doorkeeper.jp/events/upcoming" target="_blank">Doorkeeper</a> のイベントページなどにスポンサーリンクを設置させていただきます。
                 詳しくはホームページ、またはメールでお問い合わせください。
             </p>
         </section>
