Add navigation to top

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     </head>
     <body>
         <img src="./assets/img/coderdojo-ashiya_logo_yoko.svg" class="topimg" />
+        <div class="navigation">
+          <ul>
+            <li>CoderDojo とは</li>
+            <li>CoderDojo あしやについて</li>
+            <li>注意事項</li>
+            <li>スケジュール</li>
+            <li>参加するには</li>
+            <li>寄付のお願い</li>
+            <li>メンターになるには</li>
+            <li>連絡先</li>
+          </ul>
+        </div>
         <section>
             <h2>CoderDojo とは</h2>
             <p>
