Set ID to sections in top page

--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
         <img src="./assets/img/coderdojo-ashiya_logo_yoko.svg" class="topimg" />
         <div class="navigation">
           <ul>
-            <li>CoderDojo とは</li>
-            <li>CoderDojo あしやについて</li>
-            <li>注意事項</li>
-            <li>スケジュール</li>
-            <li>参加するには</li>
-            <li>寄付のお願い</li>
-            <li>メンターになるには</li>
-            <li>連絡先</li>
+            <li><a href="./#aboutCoderDojo">CoderDojo とは</a></li>
+            <li><a href="./#aboutDojoAshiya">CoderDojo あしやについて</a></li>
+            <li><a href="./#notes">注意事項</a></li>
+            <li><a href="./#schedule">スケジュール</a></li>
+            <li><a href="./#apply">参加するには</a></li>
+            <li><a href="./#donate">寄付のお願い</a></li>
+            <li><a href="./#mentor">メンターになるには</a></li>
+            <li><a href="./#contact">連絡先</a></li>
           </ul>
         </div>
-        <section>
+        <section id="aboutCoderDojo">
             <h2>CoderDojo とは</h2>
             <p>
                 CoderDojo は7歳から〜17歳を対象にした非営利のプログラミング道場です。2011年にアイルランドで始まり、2019年7月現在、世界では110カ国・2,000の道場、日本には178以上の道場があります。CoderDojo は有志のボランティアの方々によって各地で運営されていて、無料で参加することができます。CoderDojo では、参加者をニンジャ、教えてくれる人をメンター、各Dojoを運営している人をチャンピオンと呼びます。<a href="https://coderdojo.jp/" target="_blank">詳しくはこちら</a>
             </p>
         </section>
-        <section>
+        <section id="aboutDojoAshiya">
             <h2>CoderDojo あしやについて</h2>
             <p>
                 兵庫県芦屋市の市民活動センター(リードあしや)様のご協力の下、毎月土曜日に開催しています。(参加する場合は事前に申し込みが必要です) CoderDojo
                 あしやでは、メンターのみなさんが、Scratch や micro:bit、HTML や CSSを使った Web サイト制作などをサポートします。CoderDojo では「子どもたちの作りたいものをサポートする」という目的のもと、ものづくりのサポートを行います。こちらでカリキュラムを組んで、教えているわけではありません。希望に応じて、参考書や教材などを提供することは可能です。
             </p>
         </section>
-        <section>
+        <section id="notes">
             <h2>注意事項</h2>
             <ul>
                 <li>
@@ -78,7 +78,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="schedule">
             <h2>スケジュール</h2>
             <p>
                 13:00 受付開始<br />
@@ -92,7 +92,7 @@
                 16:45 終了
             </p>
         </section>
-        <section>
+        <section id="apply">
             <h2>参加するには</h2>
             <p>
                 こちらより申し込みの方をお願いいたします。
@@ -113,7 +113,7 @@
             </p>
             <a href="https://coderdojo-ashiya.doorkeeper.jp/events/upcoming" target="_blank" class="button">次回の開催日を確認する</a>
         </section>
-        <section>
+        <section id="donate">
             <h2>寄付のお願い</h2>
             <p>
                 CoderDojo あしやでは、活動継続のための寄付を受け付けています。
@@ -127,7 +127,7 @@
                 詳しくはホームページ、またはメールでお問い合わせください。
             </p>
         </section>
-        <section>
+        <section id="mentor">
             <h2>メンターになるには</h2>
             <p>
                 子どもたちのプログラミングでのものづくりをサポートしてくれるメンターを募集しています。
@@ -136,7 +136,7 @@
                 <a href="https://docs.google.com/forms/d/1yBEq46xgzQKHNWw3t2xKGKDmjx85sudeW6S0z-NOJUw" class="button">メンター申請フォーム</a>
             </p>
         </section>
-        <section>
+        <section id="contact">
             <h2>連絡先</h2>
             <p>
                 ご不明な点がありましたら、お気軽にお問い合わせください。<br />
